# BlikaEngine

./: .env.cmake  CMakeLists.txt  build.bat
shaders/: master_shader.frag  master_shader.frag.spv  master_shader.vert  master_shader.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv
src/: blikaengine.cpp  blikaengine.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  utils.hpp  window.cpp  window.hpp
src/render/: master_render_system.cpp  master_render_system.hpp  point_light_system.cpp  point_light_system.hpp
src/utils/: utils.cpp  utils.hpp
